# OpenSTL

./: .gitignore  BUILD.bazel  WORKSPACE  requirements_lock.txt
configs/bair/: BUILD.bazel
configs/custom/: BUILD.bazel
configs/human/: BUILD.bazel
configs/kinetics/: BUILD.bazel
configs/kitticaltech/: BUILD.bazel
configs/kth/: BUILD.bazel
configs/mfmnist/: BUILD.bazel
configs/mfmnist/simvp/: BUILD.bazel
configs/mmnist/: BUILD.bazel
configs/mmnist_cifar/: BUILD.bazel
configs/noisymmnist/dynamic/: BUILD.bazel
configs/noisymmnist/missing/: BUILD.bazel
configs/noisymmnist/perceptual/: BUILD.bazel
configs/taxibj/: BUILD.bazel
configs/weather/: BUILD.bazel
configs/weather/mv_4_s6_5_625/: BUILD.bazel
configs/weather/r_5_625/: BUILD.bazel
configs/weather/t2m_1_40625/: BUILD.bazel
configs/weather/t2m_5_625/: BUILD.bazel
configs/weather/tcc_5_625/: BUILD.bazel
configs/weather/uv10_5_625/: BUILD.bazel
examples/: BUILD.bazel  tutorial.ipynb
openstl/: BUILD.bazel
openstl/api/: BUILD.bazel
openstl/core/: BUILD.bazel
openstl/datasets/: BUILD.bazel  dataloader_noisy_moving_mnist.py
openstl/datasets/pipelines/: BUILD.bazel
openstl/methods/: BUILD.bazel  convlstm.py  e3dlstm.py  mau.py  mim.py  mmvp.py  phydnet.py  predrnn.py  predrnnpp.py  predrnnv2.py  simvp.py  swinlstm.py  tau.py  wast.py
openstl/models/: BUILD.bazel
openstl/modules/: BUILD.bazel  simvp_modules.py
openstl/modules/layers/: BUILD.bazel
openstl/utils/: BUILD.bazel  callbacks.py  main_utils.py
requirements/: BUILD.bazel  optional.txt  runtime.txt  tests.txt
tests/test_datasets/: BUILD.bazel
tests/test_datasets/test_pipelines/: BUILD.bazel
tests/test_models/: test_convlstm.py
tools/: BUILD.bazel
tools/model_converters/: BUILD.bazel
tools/prepare_data/: BUILD.bazel
