load("@rules_python//python:defs.bzl", "py_binary")
load("@pip_deps//:requirements.bzl", "requirement")

py_binary(
    name = "jupyter",
    srcs = ["jupyter.py"],
    main = "jupyter.py",
    deps = [
        "//openstl/api",
        "//openstl/utils",
        requirement("notebook"),
        requirement("numpy"),
        requirement("opencv-python"),
        requirement("torch"),
    ],
    data = [
        "tutorial.ipynb",
    ]
)
