load("@rules_python//python:defs.bzl", "py_library")
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "api",
    srcs = [
        "exp.py",
    ],
    deps = [
        "//openstl/datasets",
        "//openstl/methods",
        "//openstl/utils",
        requirement("pytorch-lightning"),
        requirement("torch"),
    ],
    visibility = [
        "//visibility:public",
    ],
)
