load("@rules_python//python:defs.bzl", "py_library")
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "api",
    srcs = [
        "__init__.py",
        "exp.py",
    ],
    deps = [
        "//openstl/datasets",
        "//openstl/methods",
        "//openstl/utils",
        requirement("fvcore"),
        requirement("pytorch-lightning"),
        requirement("torch"),
    ],
    visibility = [
        "//visibility:public",
    ],
)
