load("@rules_python//python:defs.bzl", "py_library")
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "core",
    srcs = [
        "__init__.py",
        "drop_scheduler.py",
        "metrics.py",
        "optim_constant.py",
        "optim_scheduler.py",
    ],
    deps = [
        requirement("lpips"),
        requirement("numpy"),
        requirement("opencv-python"),
        requirement("torch"),
        requirement("scikit-image"),
        requirement("timm"),
    ],
    visibility = [
        "//visibility:public",
    ],
)
